# practice-of-information-systems-2

./: .gitattributes  .gitignore  package-lock.json
backend/: .env.example  .gitignore  CLAUDE.md  README.md  README_AI_AGENT.md  SETUP.md  add_data_example.py  add_dummy_data.py  check_vector_store.py  cli_agent.py  config.py  database_manager.py  delete_vector_stores.py  function_tools.py  main.py  pyproject.toml  reduce_dummy_data.py  requirements.txt  search_manager.py  settings.py  setup_database.py  test.db  vector_store_manager.py
backend/app/: config.py  main.py
backend/app/database/: session.py
backend/app/routers/: auth.py  chat.py  friends.py  objectives.py  user.py  vital_data.py
backend/app/schemas/: auth.py  chat.py  objective.py  user.py  vital_data.py
backend/app/services/: agent_service.py  function_schemas.py  internal_api.py  user_service.py
backend/app/utils/: auth.py  email.py  qr_code.py
backend/migrations/: env.py
backend/migrations/versions/: 0bda397b3345_create_tables.py  335ee904e83c_friendsを追加できるようにした.py  85141f7a8f14_主にuservitalcategoryを追加した.py  8aaa6cb252d7_create_tables.py  9973c3d9a58e_主にuservitalcategoryを追加した3.py  af2eabdddb1e_userテーブルにiconとheightの追加.py  b277e46d1a8f_add_chat_conversation_and_message_tables.py  cb9c7f21025e_vitaldata_にuser_id_カラムを追加.py
backend/models/: __init__.py  chat_conversation.py  objective.py  otpcodes.py  users.py  uservitalcategory.py  vitaldata.py  vitaldataname.py
backend/venv310/: pyvenv.cfg
backend/venv310/Scripts/: activate  activate.bat  prichunkpng  pricolpng  priditherpng  priforgepng  (+8 more)
(+41 files in other folders)
